Fix: fork me "z-index"

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -9,3 +9,11 @@ h2 {
 .mb-6 {
     margin-bottom: 7rem!important;
 }
+
+.fork-me {
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: 0;
+    z-index: 1;
+}
